--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,25 @@ h1 {
 }
 
 /* Estilos de los botones */
-a.button {
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button {
   display: inline-block;
   background-color: #4CAF50;
   color: white;
   padding: 10px 20px;
-  margin-right: 10px;
+  margin-bottom: 10px;
   text-decoration: none;
+  border: 1px solid black;
   border-radius: 4px;
   transition: background-color 0.3s ease;
 }
 
-a.button:hover {
+.button:hover {
   background-color: #45a049;
 }
 
