--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,28 @@
-/* Estilos generales */
+:root {
+  --main-color: #4CAF50;
+  --hover-color: #45a049;
+  --active-color: #367c3c;
+  --white-color: white;
+  --shadow-color: rgba(0, 0, 0, 0.3);
+  --main-font: Arial, sans-serif;
+  --main-padding: 2rem;
+  --heading-font-size: 3rem;
+  --small-font-size: 1.5rem;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: var(--main-font);
   margin: 0;
-  padding: 20px;
+  padding: var(--main-padding);
+  color: var(--white-color);
+  background-color: var(--main-color);
 }
 
 h1 {
   text-align: center;
+  font-size: var(--heading-font-size);
 }
 
-/* Estilos de los botones */
 .container {
   display: flex;
   flex-direction: column;
@@ -18,35 +31,56 @@ h1 {
 
 .button {
   display: inline-block;
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 20px;
-  margin-bottom: 10px;
+  background-color: var(--main-color);
+  color: var(--white-color);
+  padding: 1rem 2rem;
+  margin-bottom: 1rem;
   text-decoration: none;
   border: none;
   border-radius: 4px;
-  transition: background-color 0.3s ease;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 0.5rem 1.5rem var(--shadow-color);
 }
 
-.button:hover {
-  background-color: #45a049;
-  transform: translateY(-2px);
+.button:hover,
+.button:focus {
+  background-color: var(--hover-color);
+  transform: translateY(-0.2rem);
 }
 
 .button:active {
-  background-color: #367c3c;
+  background-color: var(--active-color);
   transform: translateY(0);
   box-shadow: none;
 }
 
-/* Estilos para el diseño responsivo */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 37.5em) {
   body {
-    padding: 10px;
+    padding: 1rem;
   }
   
   h1 {
-    font-size: 24px;
+    font-size: var(--small-font-size);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: var(--main-color);
+    background-color: var(--white-color);
+  }
+
+  .button {
+    background-color: var(--white-color);
+    color: var(--main-color);
+  }
+
+  .button:hover,
+  .button:focus {
+    background-color: var(--hover-color);
+  }
+
+  .button:active {
+    background-color: var(--active-color);
   }
 }
