--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
+@font-face {
+  font-family: "Nerd Font Mono";
+  src: url("/fonts/3270NerdFontMono-Regular.ttf") format("truetype");
+}
+
 :root {
   --main-color: white;
   --background-color: black;
-  --main-font: Arial, sans-serif;
+  --main-font: "Nerd Font Mono", monospace;
   --main-padding: 2rem;
   --heading-font-size: 3rem;
   --small-font-size: 1.5rem;
@@ -66,41 +71,6 @@ h2 {
 }
 
 .button:active {
-  transform: translateY(0);
-  box-shadow: none;
-}
-
-@media screen and (max-width: 37.5em) {
-  body {
-    padding: 1rem;
-  }
-  
-  h1 {
-    font-size: var(--small-font-size);
-  }
-}
-
-.button {
-  display: inline-block;
-  background-color: var(--main-color);
-  color: var(--black-color);
-  padding: 1rem 2rem;
-  margin-bottom: 1rem;
-  text-decoration: none;
-  border: none;
-  border-radius: 4px;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-  box-shadow: 0 0.5rem 1.5rem var(--shadow-color);
-}
-
-.button:hover,
-.button:focus {
-  background-color: var(--hover-color);
-  transform: translateY(-0.2rem);
-}
-
-.button:active {
-  background-color: var(--active-color);
   transform: translateY(0);
   box-shadow: none;
 }
