--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ p {
     width: 100px;
     height: 100px;
     margin-bottom: 15px;
+    border-radius: 50%; /* Make the image circular */
 }
 
 @media screen and (max-width: 600px) {
