--- a/styles.css
+++ b/styles.css
@@ -20,31 +20,6 @@ header {
     text-align: center;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    background-color: #333;
-    overflow: hidden;
-}
-
-nav ul li {
-    float: left;
-}
-
-nav ul li a {
-    display: block;
-    color: lime;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: background-color 0.5s ease;
-}
-
-nav ul li a:hover {
-    background-color: #111;
-}
-
 #login {
     position: absolute;
     top: 50%;
@@ -97,13 +72,7 @@ section h2 {
     padding-bottom: 10px;
 }
 
-#infinito {
+#clock {
     font-size: 50px;
     text-align: center;
-    animation: rotate 5s linear infinite;
-}
-
-@keyframes rotate {
-    from {transform: rotate(0deg);}
-    to {transform: rotate(360deg);}
 }
